Fix markdown on mobile

--- a/markup/styles.css
+++ b/markup/styles.css
@@ -181,26 +181,6 @@ body {
     color: #ff3029;
 }
 
-.Layout-Branch {
-    margin-top: 10px;
-}
-
-.Layout-LastCommit {
-    margin-top: 4px;
-}
-
-.Layout-Tabs {
-    margin-top: 16px;
-}
-
-.Layout-Timeline {
-    margin-top: 18px;
-}
-
-.Layout-FileView {
-    margin-top: 12px;
-}
-
 @media (min-width: 800px) {
     .Header {
         padding: 0 var(--space-xxl);
@@ -212,25 +192,5 @@ body {
 
     .Body {
         padding: var(--space-s) var(--space-xxl);
-    }
-
-    .Layout-Branch {
-        margin-top: 12px;
-    }
-
-    .Layout-LastCommit {
-        margin-top: 10px;
-    }
-
-    .Layout-Tabs {
-        margin-top: 18px;
-    }
-
-    .Layout-Timeline {
-        margin-top: 24px;
-    }
-
-    .Layout-FileView {
-        margin-top: 16px;
     }
 }
